--- a/css/styles.css
+++ b/css/styles.css
@@ -37,13 +37,11 @@ a {
 
 /* Navbar layout */
 .navbar-inner {
-  max-width: 1200px;
-  margin: 0 auto;
+  width: 100%;
   padding: 0 2rem;
   display: flex;
   align-items: center;
   height: 70px;
-  width: 100%;
 }
 
 /* Logo */
